--- a/index.toml
+++ b/index.toml
@@ -1164,6 +1164,10 @@ file = "mods/tweaks/interface/ding.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/interface/disable-accessibility-screen.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/interface/drippy-loading-screen.pw.toml"
 metafile = true
 
