--- a/index.toml
+++ b/index.toml
@@ -28,6 +28,30 @@ file = "config/diet-client.toml"
 file = "config/expanded_ecosphere/config.json5"
 
 [[files]]
+file = "config/fancymenu/assets/logo.png"
+
+[[files]]
+file = "config/fancymenu/customizablemenus.txt"
+
+[[files]]
+file = "config/fancymenu/customization/drippy_loading_overlay_layout.txt"
+
+[[files]]
+file = "config/fancymenu/customization/options_screen_layout.txt"
+
+[[files]]
+file = "config/fancymenu/customization/title_screen_layout.txt"
+
+[[files]]
+file = "config/fancymenu/minecraftwindow/icons/icon16x16.png"
+
+[[files]]
+file = "config/fancymenu/minecraftwindow/icons/icon32x32.png"
+
+[[files]]
+file = "config/fancymenu/options.txt"
+
+[[files]]
 file = "config/fishontheline.json5"
 
 [[files]]
