--- a/index.toml
+++ b/index.toml
@@ -923,14 +923,6 @@ file = "mods/libraries/yungs-api.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/mobtimizations.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/servercore.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/tweaks/audio/ambientsounds.pw.toml"
 metafile = true
 
@@ -1344,6 +1336,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/performance/reeses-sodium-options.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/performance/servercore.pw.toml"
 metafile = true
 
 [[files]]
