--- a/mods/utils/ftb-backups-2.pw.toml
+++ b/mods/utils/ftb-backups-2.pw.toml
@@ -1,6 +1,6 @@
 name = "FTB Backups 2"
 filename = "ftbbackups2-fabric-1.20-1.0.23.jar"
-side = "server"
+side = "both"
 
 [download]
 hash-format = "sha1"
