--- a/index.toml
+++ b/index.toml
@@ -1119,6 +1119,10 @@ file = "mods/tweaks/hud/chatimage.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/hud/dcch.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/hud/emojiful.pw.toml"
 metafile = true
 
