disable updates for sodium mods

--- a/mods/tweaks/performance/iris.pw.toml
+++ b/mods/tweaks/performance/iris.pw.toml
@@ -7,7 +7,7 @@ url = "https://cdn.modrinth.com/data/YL57xq9U/versions/ogjxrwGQ/iris-mc1.20.1-1.
 hash-format = "sha1"
 hash = "11c22bb87b55a7991663f2187490b25ea9c9f698"
 
-[update]
-[update.modrinth]
-mod-id = "YL57xq9U"
-version = "ogjxrwGQ"
+#[update]
+#[update.modrinth]
+#mod-id = "YL57xq9U"
+#version = "ogjxrwGQ"
