--- a/mods/tweaks/performance/indium.pw.toml
+++ b/mods/tweaks/performance/indium.pw.toml
@@ -7,7 +7,7 @@ url = "https://cdn.modrinth.com/data/Orvt0mRa/versions/Lue6O9z9/indium-1.0.27%2B
 hash-format = "sha1"
 hash = "8c8e6b96243155b41f2f9d29d5940ee895bcb141"
 
-[update]
-[update.modrinth]
-mod-id = "Orvt0mRa"
-version = "Lue6O9z9"
+#[update]
+#[update.modrinth]
+#mod-id = "Orvt0mRa"
+#version = "Lue6O9z9"
