--- a/mods/tweaks/performance/sodium.pw.toml
+++ b/mods/tweaks/performance/sodium.pw.toml
@@ -7,7 +7,7 @@ url = "https://cdn.modrinth.com/data/AANobbMI/versions/4OZL6q9h/sodium-fabric-mc
 hash-format = "sha1"
 hash = "74784e6deb72e8cdb4e3788ac3a3cfd88fc77acf"
 
-[update]
-[update.modrinth]
-mod-id = "AANobbMI"
-version = "4OZL6q9h"
+#[update]
+#[update.modrinth]
+#mod-id = "AANobbMI"
+#version = "4OZL6q9h"
