--- a/mods/content/create/create-food-fabric.pw.toml
+++ b/mods/content/create/create-food-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Food [Fabric]"
-filename = "createfood-1.0.1.jar"
+filename = "create-food-1.0.2-fabric.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "b24da6ee69d552514ac57f89b754d77a0d065b78"
+hash = "20da31c66199226eb8f6ddcafccf215d8070dadd"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5033314
+file-id = 5150582
 project-id = 959439
