--- a/mods/content/furniture/dramatic-doors.pw.toml
+++ b/mods/content/furniture/dramatic-doors.pw.toml
@@ -1,13 +1,13 @@
 name = "Dramatic Doors"
-filename = "DramaticDoors-QuiFabrge-1.20.1-3.1.5.jar"
+filename = "DramaticDoors-QuiFabrge-1.20.1-3.2.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/aQ7h7gal/versions/o4QO8IBM/DramaticDoors-QuiFabrge-1.20.1-3.1.5.jar"
+url = "https://cdn.modrinth.com/data/aQ7h7gal/versions/6k6QwVAt/DramaticDoors-QuiFabrge-1.20.1-3.2.0.jar"
 hash-format = "sha1"
-hash = "4bd405174148f3b7eddad1f7ab4156440777aa89"
+hash = "e2f313577032e8d941547518f35b171eeaf8b4b3"
 
 [update]
 [update.modrinth]
 mod-id = "aQ7h7gal"
-version = "o4QO8IBM"
+version = "6k6QwVAt"
