--- a/index.toml
+++ b/index.toml
@@ -1298,6 +1298,10 @@ file = "mods/tweaks/inventory/tooltipfix.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/performance/async-locator.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/performance/badoptimizations.pw.toml"
 metafile = true
 
