--- a/mods/content/storage/metal-bundles.pw.toml
+++ b/mods/content/storage/metal-bundles.pw.toml
@@ -1,13 +1,13 @@
 name = "Metal Bundles"
-filename = "MetalBundles-v8.0.1-1.20.1-Fabric.jar"
+filename = "MetalBundles-v8.0.2-1.20.1-Fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6pY6oEMg/versions/qvjFwOwH/MetalBundles-v8.0.1-1.20.1-Fabric.jar"
+url = "https://cdn.modrinth.com/data/6pY6oEMg/versions/XJ1sQO5V/MetalBundles-v8.0.2-1.20.1-Fabric.jar"
 hash-format = "sha1"
-hash = "66f1bade97529a911087a83ccb3d2e2b1df329b1"
+hash = "a97e8399c757ec561c0a4ce5e6df46608ce8d035"
 
 [update]
 [update.modrinth]
 mod-id = "6pY6oEMg"
-version = "qvjFwOwH"
+version = "XJ1sQO5V"
