--- a/mods/content/supplementaries/amendments.pw.toml
+++ b/mods/content/supplementaries/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.1.5-fabric.jar"
+filename = "amendments-1.20-1.1.6-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/xvg2LEOW/amendments-1.20-1.1.5-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/XvDWhck2/amendments-1.20-1.1.6-fabric.jar"
 hash-format = "sha1"
-hash = "361cf26ea94f605dd91155581ed863ff41456625"
+hash = "c05572931c317adaf8938d7610535c250c442f1b"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "xvg2LEOW"
+version = "XvDWhck2"
