--- a/mods/utils/emi/ae2-emi-crafting.pw.toml
+++ b/mods/utils/emi/ae2-emi-crafting.pw.toml
@@ -1,13 +1,13 @@
 name = "AE2 EMI Crafting Integration"
-filename = "ae2-emi-crafting-1.3.0.jar"
+filename = "ae2-emi-crafting-1.3.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/eVAp8Nkw/versions/NT8BCliT/ae2-emi-crafting-1.3.0.jar"
+url = "https://cdn.modrinth.com/data/eVAp8Nkw/versions/lEmazn2j/ae2-emi-crafting-1.3.1.jar"
 hash-format = "sha1"
-hash = "90cdf76187924ae274f6d6744d18f052a8613995"
+hash = "1a8d8e4a58c9be517c05c14f36c7d663f65a569f"
 
 [update]
 [update.modrinth]
 mod-id = "eVAp8Nkw"
-version = "NT8BCliT"
+version = "lEmazn2j"
