--- a/mods/content/computer-craft/plethora-peripherals.pw.toml
+++ b/mods/content/computer-craft/plethora-peripherals.pw.toml
@@ -1,13 +1,13 @@
 name = "Plethora Peripherals"
-filename = "Plethora-Fabric-1.10.0.jar"
+filename = "Plethora-Fabric-1.10.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/RegJhcjp/Plethora-Fabric-1.10.0.jar"
+url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/elKTU3iY/Plethora-Fabric-1.10.2.jar"
 hash-format = "sha1"
-hash = "390268648317e089e30f1a4b8c441d165e5e7338"
+hash = "360899e93b2974efb350e647a2e41120ad22c723"
 
 [update]
 [update.modrinth]
 mod-id = "LDfFdCXe"
-version = "RegJhcjp"
+version = "elKTU3iY"
