--- a/mods/tweaks/gameplay/craftpresence.pw.toml
+++ b/mods/tweaks/gameplay/craftpresence.pw.toml
@@ -1,13 +1,13 @@
 name = "CraftPresence"
-filename = "CraftPresence-2.3.0+1.20.1.jar"
+filename = "CraftPresence-2.3.5+1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/4Fdx9hAh/CraftPresence-2.3.0%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/urdW3Lsm/CraftPresence-2.3.5%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "b757e2a46c8acab5cd6d45e070d5dd0edb30c356"
+hash = "c82d8a3baaa857a8fcf61d39b2000aded6e935ce"
 
 [update]
 [update.modrinth]
 mod-id = "DFqQfIBR"
-version = "4Fdx9hAh"
+version = "urdW3Lsm"
