--- a/index.toml
+++ b/index.toml
@@ -31,6 +31,9 @@ file = "config/diet-client.toml"
 file = "config/expanded_ecosphere/config.json5"
 
 [[files]]
+file = "config/fabric_loader_dependencies.json"
+
+[[files]]
 file = "config/fancymenu/assets/logo.png"
 
 [[files]]
