Added ae terminals to sort blacklist

--- a/config/inventorysorter/blacklist.json5
+++ b/config/inventorysorter/blacklist.json5
@@ -3,6 +3,11 @@
   "blacklistDownloadURL": "",
   // The opened inventory's sort button will not be visible, only the player's when this inventory is opened
   "doNotSortList": [
+    "ae2:wireless_terminal",
+    "ae2:wireless_crafting_terminal",
+    "ae2wtlib:wireless_pattern_encoding_terminal",
+    "ae2wtlib:wireless_pattern_access_terminal",
+    "ae2wtlib:wireless_universal_terminal",
     "guild:quest_screen",
     "adorn:trading_station",
     "spectrum:pedestal",
