Updated more mods

--- a/mods/content/farmers-delight/farmers-knives.pw.toml
+++ b/mods/content/farmers-delight/farmers-knives.pw.toml
@@ -1,13 +1,13 @@
 name = "Farmer's Knives [Fabric]"
-filename = "farmersknives-3.0.2.jar"
+filename = "farmersknives-3.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/uc3VdfLM/versions/B0v38ktj/farmersknives-3.0.2.jar"
+url = "https://cdn.modrinth.com/data/uc3VdfLM/versions/nKwD1wd7/farmersknives-3.1.jar"
 hash-format = "sha1"
-hash = "6451e8a75ebb3c990c53b8e8fda50acbea0fef09"
+hash = "996d6836ff7ad9a1b93a5cce213505657205ae26"
 
 [update]
 [update.modrinth]
 mod-id = "uc3VdfLM"
-version = "B0v38ktj"
+version = "nKwD1wd7"
