--- a/mods/content/computer-craft/plethora-peripherals.pw.toml
+++ b/mods/content/computer-craft/plethora-peripherals.pw.toml
@@ -1,13 +1,13 @@
 name = "Plethora Peripherals"
-filename = "Plethora-Fabric-1.10.2.jar"
+filename = "Plethora-Fabric-1.10.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/elKTU3iY/Plethora-Fabric-1.10.2.jar"
+url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/Y1pChlDK/Plethora-Fabric-1.10.3.jar"
 hash-format = "sha1"
-hash = "360899e93b2974efb350e647a2e41120ad22c723"
+hash = "2c9233cbf1c830be8a465502be52d540eea8dd88"
 
 [update]
 [update.modrinth]
 mod-id = "LDfFdCXe"
-version = "elKTU3iY"
+version = "Y1pChlDK"
