--- a/mods/libraries/moonlight.pw.toml
+++ b/mods/libraries/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.2-fabric.jar"
+filename = "moonlight-1.20-2.11.3-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/SBI44BXf/moonlight-1.20-2.11.2-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/JEGquuvM/moonlight-1.20-2.11.3-fabric.jar"
 hash-format = "sha1"
-hash = "bf15d09f3b92a7220123257cfb3b4ff3744ffe8e"
+hash = "d000701bfaef0a6d99aac1d5c91ad540a548f5e0"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "SBI44BXf"
+version = "JEGquuvM"
