--- a/index.toml
+++ b/index.toml
@@ -1512,6 +1512,10 @@ file = "mods/utils/nsmp-discord-bridge.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/utils/nsmp-restarter.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/utils/scatter-spawn.pw.toml"
 metafile = true
 
