--- a/index.toml
+++ b/index.toml
@@ -78,6 +78,10 @@ file = "config/paxi/datapacks/nsmp-all-eggs-are-eggs-datapack.pw.toml"
 metafile = true
 
 [[files]]
+file = "config/paxi/datapacks/nsmp-better-end-skill-issue-datapack.pw.toml"
+metafile = true
+
+[[files]]
 file = "config/paxi/datapacks/nsmp-connected-chains-datapack.pw.toml"
 metafile = true
 
