Update a bunch of mods

--- a/mods/tweaks/interface/better-stats.pw.toml
+++ b/mods/tweaks/interface/better-stats.pw.toml
@@ -1,13 +1,13 @@
 name = "Better Statistics Screen"
-filename = "betterstats-3.9.1+fabric-1.20.1.jar"
+filename = "betterstats-3.9.4+fabric-1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/n6PXGAoM/versions/wyQ2nH56/betterstats-3.9.1%2Bfabric-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/n6PXGAoM/versions/7KRgzNWt/betterstats-3.9.4%2Bfabric-1.20.1.jar"
 hash-format = "sha1"
-hash = "a8fdac9707d354d2893be6bf19dbc29142ac7fe7"
+hash = "4e1233ab8d957a34d2bc24e853cacaa67f96aa68"
 
 [update]
 [update.modrinth]
 mod-id = "n6PXGAoM"
-version = "wyQ2nH56"
+version = "7KRgzNWt"
