--- a/mods/content/computer-craft/plethora-peripherals.pw.toml
+++ b/mods/content/computer-craft/plethora-peripherals.pw.toml
@@ -1,13 +1,13 @@
 name = "Plethora Peripherals"
-filename = "Plethora-Fabric-1.10.3.jar"
+filename = "Plethora-Fabric-1.10.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/Y1pChlDK/Plethora-Fabric-1.10.3.jar"
+url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/2fxCEuJh/Plethora-Fabric-1.10.6.jar"
 hash-format = "sha1"
-hash = "2c9233cbf1c830be8a465502be52d540eea8dd88"
+hash = "2fb707889db8d1cd3b4881b0e325721a3cb9b68f"
 
 [update]
 [update.modrinth]
 mod-id = "LDfFdCXe"
-version = "Y1pChlDK"
+version = "2fxCEuJh"
