--- a/mods/content/difficulty/scorchful.pw.toml
+++ b/mods/content/difficulty/scorchful.pw.toml
@@ -1,13 +1,13 @@
 name = "Scorchful"
-filename = "scorchful-0.1.1.jar"
+filename = "scorchful-0.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/SZQ5qcdn/versions/z7yjIK2X/scorchful-0.1.1.jar"
+url = "https://cdn.modrinth.com/data/SZQ5qcdn/versions/i8pNKmNu/scorchful-0.2.jar"
 hash-format = "sha1"
-hash = "8c41e7836b4fdf9cf9120fd7ba7f5e16ebe50a2e"
+hash = "d53df52ee33fc63632295d15e1179515cf9f20d7"
 
 [update]
 [update.modrinth]
 mod-id = "SZQ5qcdn"
-version = "z7yjIK2X"
+version = "i8pNKmNu"
