--- a/mods/tweaks/hud/chatimage.pw.toml
+++ b/mods/tweaks/hud/chatimage.pw.toml
@@ -1,13 +1,13 @@
 name = "ChatImage"
-filename = "ChatImage-1.2.0+1.20.1+fabric.jar"
+filename = "ChatImage-1.2.3+1.20.1+fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/zhVN1dvW/versions/UJIFq70T/ChatImage-1.2.0%2B1.20.1%2Bfabric.jar"
+url = "https://cdn.modrinth.com/data/zhVN1dvW/versions/e0rF5dq6/ChatImage-1.2.3%2B1.20.1%2Bfabric.jar"
 hash-format = "sha1"
-hash = "60c037f5bbf0b29e82069a7b8176aa1f986ca054"
+hash = "30b6c26540df3c39fe7dc64eb0c767e4b26f2cd5"
 
 [update]
 [update.modrinth]
 mod-id = "zhVN1dvW"
-version = "UJIFq70T"
+version = "e0rF5dq6"
