--- a/mods/tweaks/performance/fast-paintings.pw.toml
+++ b/mods/tweaks/performance/fast-paintings.pw.toml
@@ -1,13 +1,13 @@
 name = "Fast Paintings"
-filename = "fastpaintings-1.20-1.2.4-fabric.jar"
+filename = "fastpaintings-1.20-1.2.5-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/z3TzcquW/versions/lX081UbH/fastpaintings-1.20-1.2.4-fabric.jar"
+url = "https://cdn.modrinth.com/data/z3TzcquW/versions/l1rst34K/fastpaintings-1.20-1.2.5-fabric.jar"
 hash-format = "sha1"
-hash = "5b30718c8aea57202429e478bcafa21d1176267e"
+hash = "abb17315adb718a922f200779399d0a2d976ac1c"
 
 [update]
 [update.modrinth]
 mod-id = "z3TzcquW"
-version = "lX081UbH"
+version = "l1rst34K"
