--- a/mods/content/qol/straw-statues.pw.toml
+++ b/mods/content/qol/straw-statues.pw.toml
@@ -1,13 +1,13 @@
 name = "Straw Statues"
-filename = "StrawStatues-v8.0.2-1.20.1-Fabric.jar"
+filename = "StrawStatues-v8.0.3-1.20.1-Fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/2fltysAl/versions/WjnRG2fS/StrawStatues-v8.0.2-1.20.1-Fabric.jar"
+url = "https://cdn.modrinth.com/data/2fltysAl/versions/frXSmfj0/StrawStatues-v8.0.3-1.20.1-Fabric.jar"
 hash-format = "sha1"
-hash = "8235d03932f51eb9185f7fa76a683e4dcfcd7173"
+hash = "b2614a0e01693034b9b4dd23001a6567e6a404b9"
 
 [update]
 [update.modrinth]
 mod-id = "2fltysAl"
-version = "WjnRG2fS"
+version = "frXSmfj0"
