--- a/mods/content/difficulty/dehydration.pw.toml
+++ b/mods/content/difficulty/dehydration.pw.toml
@@ -1,13 +1,13 @@
 name = "Dehydration"
-filename = "dehydration-1.3.5.jar"
+filename = "dehydration-1.3.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/qWDh3G0p/versions/nCkKBlDE/dehydration-1.3.5.jar"
+url = "https://cdn.modrinth.com/data/qWDh3G0p/versions/60cSGCnr/dehydration-1.3.6.jar"
 hash-format = "sha1"
-hash = "498803711d73c8ae0ae0096d0d576f26b64968b8"
+hash = "dbbabfb44c17afb75b684164f89a6402d1dceb91"
 
 [update]
 [update.modrinth]
 mod-id = "qWDh3G0p"
-version = "nCkKBlDE"
+version = "60cSGCnr"
