--- a/mods/content/difficulty/scorchful.pw.toml
+++ b/mods/content/difficulty/scorchful.pw.toml
@@ -1,13 +1,13 @@
 name = "Scorchful"
-filename = "scorchful-0.2.jar"
+filename = "scorchful-0.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/SZQ5qcdn/versions/i8pNKmNu/scorchful-0.2.jar"
+url = "https://cdn.modrinth.com/data/SZQ5qcdn/versions/iyfBHKZI/scorchful-0.3.jar"
 hash-format = "sha1"
-hash = "d53df52ee33fc63632295d15e1179515cf9f20d7"
+hash = "2dfd3cac90d6896f9fc280401752f5a132b3d2da"
 
 [update]
 [update.modrinth]
 mod-id = "SZQ5qcdn"
-version = "i8pNKmNu"
+version = "iyfBHKZI"
