--- a/mods/libraries/pehkui.pw.toml
+++ b/mods/libraries/pehkui.pw.toml
@@ -1,13 +1,13 @@
 name = "Pehkui"
-filename = "Pehkui-3.7.12+1.14.4-1.20.4.jar"
+filename = "Pehkui-3.8.0+1.14.4-1.20.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/t5W7Jfwy/versions/CEwGflAU/Pehkui-3.7.12%2B1.14.4-1.20.4.jar"
+url = "https://cdn.modrinth.com/data/t5W7Jfwy/versions/czRgm3k6/Pehkui-3.8.0%2B1.14.4-1.20.4.jar"
 hash-format = "sha1"
-hash = "334015cd10266f628b1a9b9036db16f6fab9cf1e"
+hash = "a02d5c4e8022a4129ee87e95b51b2a61551df5a5"
 
 [update]
 [update.modrinth]
 mod-id = "t5W7Jfwy"
-version = "CEwGflAU"
+version = "czRgm3k6"
