--- a/index.toml
+++ b/index.toml
@@ -940,10 +940,6 @@ file = "mods/libraries/yungs-api.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/packet-fixer.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/tweaks/audio/ambientsounds.pw.toml"
 metafile = true
 
@@ -1077,6 +1073,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/gameplay/nyfs-spiders.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/gameplay/packet-fixer.pw.toml"
 metafile = true
 
 [[files]]
