--- a/mods/libraries/thermoo.pw.toml
+++ b/mods/libraries/thermoo.pw.toml
@@ -1,13 +1,13 @@
 name = "Thermoo"
-filename = "thermoo-2.1.2.jar"
+filename = "thermoo-2.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9TbXlAut/versions/7gsRgS59/thermoo-2.1.2.jar"
+url = "https://cdn.modrinth.com/data/9TbXlAut/versions/hcoVoIIa/thermoo-2.2.jar"
 hash-format = "sha1"
-hash = "cbbd7e72afa9e0bc061c7cbc3497605fde44ff97"
+hash = "c05ae3aebb606135444026f5d877998f1c0faae5"
 
 [update]
 [update.modrinth]
 mod-id = "9TbXlAut"
-version = "7gsRgS59"
+version = "hcoVoIIa"
