--- a/mods/tweaks/gameplay/spyglass-improvements.pw.toml
+++ b/mods/tweaks/gameplay/spyglass-improvements.pw.toml
@@ -1,13 +1,13 @@
 name = "Spyglass Improvements"
-filename = "spyglass-improvements-1.4+mc1.20+fabric.jar"
+filename = "spyglass-improvements-1.5+mc1.20+fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Z6ykjRlM/versions/Tem7SpXI/spyglass-improvements-1.4%2Bmc1.20%2Bfabric.jar"
+url = "https://cdn.modrinth.com/data/Z6ykjRlM/versions/aYi3K1Il/spyglass-improvements-1.5%2Bmc1.20%2Bfabric.jar"
 hash-format = "sha1"
-hash = "e395db8076b28076f991d61262827033980145dc"
+hash = "8918bcce9474a0f1b1afec5e9c6ba6e881f11f4a"
 
 [update]
 [update.modrinth]
 mod-id = "Z6ykjRlM"
-version = "Tem7SpXI"
+version = "aYi3K1Il"
