--- a/mods/tweaks/building/diagonal-windows.pw.toml
+++ b/mods/tweaks/building/diagonal-windows.pw.toml
@@ -1,13 +1,13 @@
 name = "Diagonal Windows"
-filename = "DiagonalWindows-v8.1.3-1.20.1-Fabric.jar"
+filename = "DiagonalWindows-v8.1.4-1.20.1-Fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/oOi0CKes/versions/xKu8mur6/DiagonalWindows-v8.1.3-1.20.1-Fabric.jar"
+url = "https://cdn.modrinth.com/data/oOi0CKes/versions/hrygyCMp/DiagonalWindows-v8.1.4-1.20.1-Fabric.jar"
 hash-format = "sha1"
-hash = "7c6b055dde40146bda58dbfecf66c6ab92e0bec4"
+hash = "933f0a6ffe611b0327e40179ddf0a62d7a00f356"
 
 [update]
 [update.modrinth]
 mod-id = "oOi0CKes"
-version = "xKu8mur6"
+version = "hrygyCMp"
