--- a/mods/tweaks/gameplay/polymorph.pw.toml
+++ b/mods/tweaks/gameplay/polymorph.pw.toml
@@ -1,13 +1,13 @@
 name = "Polymorph"
-filename = "polymorph-fabric-0.49.1+1.20.1.jar"
+filename = "polymorph-fabric-0.49.3+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/tagwiZkJ/versions/E4b6m0sQ/polymorph-fabric-0.49.1%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/tagwiZkJ/versions/akZJjqpV/polymorph-fabric-0.49.3%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "4cafe3f4ae7335eab69b63acf30279ad3ffaf697"
+hash = "cb2736af373db0af0a16941f49e49dfa28999472"
 
 [update]
 [update.modrinth]
 mod-id = "tagwiZkJ"
-version = "E4b6m0sQ"
+version = "akZJjqpV"
