--- a/index.toml
+++ b/index.toml
@@ -940,6 +940,10 @@ file = "mods/libraries/yungs-api.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/supplementaries.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/audio/ambientsounds.pw.toml"
 metafile = true
 
